Fix mobile menu visible on desktop

--- a/public/wp-content/themes/jt-waterfall/assets/src/scss/min-960/_menu.scss
+++ b/public/wp-content/themes/jt-waterfall/assets/src/scss/min-960/_menu.scss
@@ -1,5 +1,5 @@
-.menu-toggler-wrapper {
-  display: none;
+.menu-toggler-wrapper, .menu--main-mobile {
+  display: none !important;
 }
 
 .menu--main-desktop {
